# GDBus_Chat_App

./: README.md
interfaces/: chat_management_api.xml  msg_api.xml
interfaces/chat_management_api/: chat_management_api_common.cpp  chat_management_api_common.h  chat_management_api_proxy.cpp  chat_management_api_proxy.h  chat_management_api_stub.cpp  chat_management_api_stub.h
interfaces/msg_api/: msg_api_common.cpp  msg_api_common.h  msg_api_proxy.cpp  msg_api_proxy.h  msg_api_stub.cpp  msg_api_stub.h
src/client/: CMakeLists.txt  client.cpp
src/client/QTvClient/: CMakeLists.txt  ChatList.qml  ChatRoom.qml  Main.qml  Room.qml  chatlist.cpp  chatlist.h  chatroom.cpp  chatroom.h  main.cpp  main.h  room.cpp  room.h
src/client/QTvClient/qml/: ChatList.qml  ChatRoom.qml  Main.qml  UserList.qml
src/client/QTvClient/src/: main.cpp
src/client/QTvClient/src/header/: chat_management_api.h  msg_management_api.h  window_manager.hpp
src/client/QTvClient/src/implementation/: chat_management_api.cpp  msg_management_api.cpp
src/server/: CMakeLists.txt  chat_management_api_stub.cpp  chat_management_api_stub.h  msg_api_stub.cpp  msg_api_stub.h  server.cpp  server_data.hpp
